--- a/package.json
+++ b/package.json
@@ -8,46 +8,19 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit -p tsconfig.app.json",
-    "server": "node server.mjs",
-    "db:migrate": "npx prisma migrate deploy",
-    "db:seed": "node prisma/seed.js",
-    "db:setup": "npm run db:migrate && npm run db:seed"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
-    "bcryptjs": "^3.0.3",
+    "@react-three/drei": "^9.105.0",
+    "@react-three/fiber": "^8.16.0",
     "chart.js": "^4.5.1",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
     "framer-motion": "^12.23.24",
-    "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
-    "multer": "^2.0.2",
-    "node-cron": "^4.2.1",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.10",
-    "openai": "^6.8.1",
-    "pdfkit": "^0.17.2",
-    "pg": "^8.16.3",
-    "prisma": "^6.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
-    "remove.bg": "^1.3.0",
-    "sharp": "^0.34.5",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "three": "^0.181.0",
-    "twilio": "^5.10.4"
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
